{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 40,
  "lineage": "ae143963-9e6e-837c-8d87-74a687d22765",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-jenkins-eks-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:security-group/sg-0465d8bd44f7ff02f",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0465d8bd44f7ff02f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-jenkins-eks",
            "name_prefix": "",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-jenkins-eks-sg"
            },
            "tags_all": {
              "Name": "terraform-jenkins-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0651f4fa52979e877"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "sg-0465d8bd44f7ff02f",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-jenkins-rule-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:security-group/sg-0779195e46dc40718",
            "description": "Terraform Jenkins Rule Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0779195e46dc40718",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-jenkins-rule-sg",
            "name_prefix": "",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-jenkins-rule-sg"
            },
            "tags_all": {
              "Name": "terraform-jenkins-rule-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0651f4fa52979e877"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "sg-0779195e46dc40718",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eeab253db7e765a9",
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:instance/i-007bc206acc4f6951",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007bc206acc4f6951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2e64ff244e39d4b"
              }
            ],
            "primary_network_interface_id": "eni-0d2e64ff244e39d4b",
            "private_dns": "ip-10-0-1-180.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-24-136-186.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.24.136.186",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0024fa0620f1028de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d99b1dc52bd0c008",
            "tags": {
              "Name": "terraform-jenkins-instance"
            },
            "tags_all": {
              "Name": "terraform-jenkins-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0465d8bd44f7ff02f",
              "sg-0779195e46dc40718"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "i-007bc206acc4f6951",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.sg.aws_security_group.terraform-jenkins-eks-sg",
            "module.sg.aws_security_group.terraform-jenkins-rule-sg",
            "module.vpc.aws_subnet.terraform-jenkins-eks-subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_ami.ubuntu",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-jenkins-eks-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:internet-gateway/igw-0984d10c5606fdaf0",
            "id": "igw-0984d10c5606fdaf0",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terraform-jenkins-eks-internet-gateway"
            },
            "tags_all": {
              "Name": "terraform-jenkins-eks-internet-gateway"
            },
            "vpc_id": "vpc-0651f4fa52979e877"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-jenkins-eks-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:route-table/rtb-0a0a9d31fd60defff",
            "id": "rtb-0a0a9d31fd60defff",
            "owner_id": "423014875604",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0984d10c5606fdaf0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-jenkins-eks-route-table"
            },
            "tags_all": {
              "Name": "terraform-jenkins-eks-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0651f4fa52979e877"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "rtb-0a0a9d31fd60defff",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-jenkins-eks-internet-gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-jenkins-eks-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd959fd317d7a7b5",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0a0a9d31fd60defff",
            "subnet_id": "subnet-0d99b1dc52bd0c008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-jenkins-eks-internet-gateway",
            "module.vpc.aws_route_table.terraform-jenkins-eks-route-table",
            "module.vpc.aws_subnet.terraform-jenkins-eks-subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-jenkins-eks-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:subnet/subnet-0d99b1dc52bd0c008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d99b1dc52bd0c008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423014875604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terraform-jenkins-eks-subnet"
            },
            "tags_all": {
              "Name": "terraform-jenkins-eks-subnet"
            },
            "vpc_id": "vpc-0651f4fa52979e877"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423014875604",
            "id": "subnet-0d99b1dc52bd0c008",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:423014875604:vpc/vpc-0651f4fa52979e877",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0695e3b6618ff94",
            "default_route_table_id": "rtb-0cb95d58a70b05e0d",
            "default_security_group_id": "sg-0ce5de6484042d2b7",
            "dhcp_options_id": "dopt-03a78733ba5cbfe48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0651f4fa52979e877",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb95d58a70b05e0d",
            "owner_id": "423014875604",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "jenkins-kubernetes"
            },
            "tags_all": {
              "Name": "jenkins-kubernetes"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}